--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "jose": "^5.9.6",
     "lucide-react": "^0.468.0",
     "negotiator": "^1.0.0",
-    "next": ">=15.3.2",
+    "next": "15.3.6",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
